vendor/asupersync/asupersync-macros/tests/compile_fail/spawn_no_args.rs
use asupersync_macros::spawn;

fn main() {
    // spawn! requires at least a future expression
    let _ = spawn!();
}
